--- a/code/composer.json
+++ b/code/composer.json
@@ -11,7 +11,8 @@
         "symfony/yaml": "^3.4"
     },
     "require-dev": {
-        "symfony/dotenv": "^3.4"
+        "symfony/dotenv": "^3.4",
+        "symfony/profiler-pack": "^1.0"
     },
     "config": {
         "preferred-install": {
