--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
         ports:
             - "9000:9000"
         volumes:
-            - ./symfony:/var/www/symfony:cached
+            - ./code:/var/www/symfony:cached
             - ./logs/symfony:/var/www/symfony/var/logs:cached
         links:
             - db
@@ -27,14 +27,14 @@ services:
         volumes_from:
             - php
         volumes:
-            - ./containers/logs/nginx/:/var/log/nginx:cached
-#    elk:
-#        image: willdurand/elk
-#        ports:
-#            - "81:80"
-#        volumes:
-#            - ./elk/logstash:/etc/logstash:cached
-#            - ./elk/logstash/patterns:/opt/logstash/patterns:cached
-#        volumes_from:
-#            - php
-#            - nginx
+            - ./logs/nginx/:/var/log/nginx:cached
+    elk:
+        image: willdurand/elk
+        ports:
+            - "82:80"
+        volumes:
+            - ./containers/elk/logstash:/etc/logstash:cached
+            - ./containers/elk/logstash/patterns:/opt/logstash/patterns:cached
+        volumes_from:
+            - php
+            - nginx
