minimal setup of doctrine & call from database

--- a/app/.env.dist
+++ b/app/.env.dist
@@ -8,3 +8,7 @@ APP_SECRET=e77ef2f029fda39226b0eff7e549ff71
 #TRUSTED_PROXIES=127.0.0.1,127.0.0.2
 #TRUSTED_HOSTS=localhost,example.com
 ###< symfony/framework-bundle ###
+
+###> doctrine/doctrine-bundle ###
+DATABASE_URL=postgresql://symfony:symfony@db:5432/aeris
+###< doctrine/doctrine-bundle ###
