--- a/app/composer.json
+++ b/app/composer.json
@@ -11,6 +11,7 @@
         "symfony/lts": "^3",
         "symfony/maker-bundle": "^1.2",
         "symfony/orm-pack": "^1.0",
+        "symfony/webpack-encore-pack": "^1.0",
         "symfony/yaml": "^3.4"
     },
     "require-dev": {
