--- a/containers/php-fpm/Dockerfile
+++ b/containers/php-fpm/Dockerfile
@@ -21,6 +21,7 @@ RUN apk add --update \
     php7-pdo_pgsql \
     php7-xml \
     php7-zlib \
+    php7-zip \
     php7-phar \
     php7-tokenizer \
     php7-session \
