--- a/app/composer.json
+++ b/app/composer.json
@@ -12,6 +12,7 @@
         "symfony/lts": "^3",
         "symfony/maker-bundle": "^1.2",
         "symfony/orm-pack": "^1.0",
+        "symfony/security-bundle": "^3.4",
         "symfony/webpack-encore-pack": "^1.0",
         "symfony/yaml": "^3.4"
     },
