Got that stupid FOSUB installation to work. Flex, I hate you

--- a/app/.env.dist
+++ b/app/.env.dist
@@ -12,3 +12,10 @@ APP_SECRET=e77ef2f029fda39226b0eff7e549ff71
 ###> doctrine/doctrine-bundle ###
 DATABASE_URL=postgresql://symfony:symfony@db:5432/aeris
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/swiftmailer-bundle ###
+# For Gmail as a transport, use: "gmail://username:password@localhost"
+# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
+# Delivery is disabled by default via "null://localhost"
+MAILER_URL=null://localhost
+###< symfony/swiftmailer-bundle ###
