--- a/app/config/routes.yaml
+++ b/app/config/routes.yaml
@@ -1,6 +1,14 @@
-index:
+route_index:
     path: /
     defaults: { _controller: 'App\Controller\DefaultController::index' }
+
+route_dashboard:
+    path: /tableau-de-bord
+    defaults: { _controller: 'App\Controller\UserController::dashboard' }
+
+route_declaration:
+    path: /declaration
+    defaults: { _controller: 'App\Controller\UserController::declaration' }
 
 fos_user:
     resource: "@FOSUserBundle/Resources/config/routing/security.xml"
