basic layout for internal pages

--- a/app/config/packages/security.yaml
+++ b/app/config/packages/security.yaml
@@ -16,7 +16,7 @@ security:
                 login_path: /login
                 check_path: /login_check
                 always_use_default_target_path: false
-                default_target_path: /tableau-de-bord
+                default_target_path: /declaration
             logout:       true
             anonymous:    true
  
