--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
         "build": "encore production"
     },
     "dependencies": {
+        "bulma": "^0.6.2",
         "template.data.gouv.fr": "https://github.com/etalab/template.data.gouv.fr.git"
     }
 }
