--- a/app/config/routes.yaml
+++ b/app/config/routes.yaml
@@ -10,5 +10,9 @@ route_declaration:
     path: /declaration
     defaults: { _controller: 'App\Controller\UserController::declaration' }
 
+route_cr:
+    path: /compte-rendu
+    defaults: { _controller: 'App\Controller\UserController::cr' }
+
 fos_user:
     resource: "@FOSUserBundle/Resources/config/routing/security.xml"
