--- a/app/config/routes.yaml
+++ b/app/config/routes.yaml
@@ -11,12 +11,16 @@ route_declaration:
     defaults: { _controller: 'App\Controller\UserController::declaration' }
 
 route_history:
-    path: /historique
+    path: /historique/{incinerateurId}
     defaults: { _controller: 'App\Controller\UserController::historique' }
 
 route_cr:
     path: /compte-rendu
     defaults: { _controller: 'App\Controller\UserController::cr' }
+
+route_liste_incinerateurs:
+    path: /liste-incinerateurs
+    defaults: { _controller: 'App\Controller\UserController::liste_incinerateurs' }
 
 fos_user:
     resource: "@FOSUserBundle/Resources/config/routing/security.xml"
