--- a/app/config/routes.yaml
+++ b/app/config/routes.yaml
@@ -8,7 +8,11 @@ route_dashboard:
 
 route_declaration:
     path: /declaration
-    defaults: { _controller: 'App\Controller\UserController::declaration' }
+    defaults: { _controller: 'App\Controller\OwnerController::declaration' }
+
+route_download_template:
+    path: /telecharger-modele
+    defaults: { _controller: 'App\Controller\OwnerController::downloadDeclarationTemplate' }
 
 route_history:
     path: /historique/{incinerateurId}
