--- a/app/composer.json
+++ b/app/composer.json
@@ -15,7 +15,8 @@
         "symfony/orm-pack": "^1.0",
         "symfony/security-bundle": "^3.4",
         "symfony/webpack-encore-pack": "^1.0",
-        "symfony/yaml": "^3.4"
+        "symfony/yaml": "^3.4",
+        "vich/uploader-bundle": "^1.7"
     },
     "require-dev": {
         "symfony/dotenv": "^3.4",
