--- a/app/config/packages/vich_uploader.yaml
+++ b/app/config/packages/vich_uploader.yaml
@@ -1,7 +1,7 @@
 vich_uploader:
     db_driver: orm
 
-    #mappings:
-    #    products:
-    #        uri_prefix: /images/products
-    #        upload_destination: '%kernel.project_dir%/public/images/products'
+    mappings:
+        declaration_incinerateur:
+            uri_prefix: '/declarations/incinerateur'
+            upload_destination: '%kernel.project_dir%/public/declarations/incinerateur'
