--- a/containers/nginx/nginx.conf
+++ b/containers/nginx/nginx.conf
@@ -24,6 +24,9 @@ http {
   include /etc/nginx/conf.d/*.conf;
   include /etc/nginx/sites-enabled/*;
   open_file_cache max=100;
+
+  client_body_buffer_size     10M;
+  client_max_body_size        10M;
 }
 
 daemon off;
