--- a/app/config/packages/security.yaml
+++ b/app/config/packages/security.yaml
@@ -16,7 +16,8 @@ security:
                 login_path: /login
                 check_path: /login_check
                 always_use_default_target_path: false
-                default_target_path: /declaration
+                success_handler: "app.security.login_success_handler"
+
             logout:       true
             anonymous:    true
  
@@ -29,3 +30,4 @@ security:
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/admin/, role: ROLE_ADMIN }
+
