better display of line names

--- a/app/composer.json
+++ b/app/composer.json
@@ -8,12 +8,14 @@
         "squizlabs/php_codesniffer": "*",
         "symfony/asset": "^3.4",
         "symfony/console": "^3.4",
+        "symfony/debug-pack": "^1.0",
         "symfony/flex": "^1.0",
         "symfony/framework-bundle": "^3.4",
         "symfony/lts": "^3",
         "symfony/maker-bundle": "^1.2",
         "symfony/orm-pack": "^1.0",
         "symfony/security-bundle": "^3.4",
+        "symfony/var-dumper": "^3.4",
         "symfony/webpack-encore-pack": "^1.0",
         "symfony/yaml": "^3.4",
         "vich/uploader-bundle": "^1.7"
