working file upload

--- a/containers/nginx/nginx.conf
+++ b/containers/nginx/nginx.conf
@@ -25,8 +25,9 @@ http {
   include /etc/nginx/sites-enabled/*;
   open_file_cache max=100;
 
-  client_body_buffer_size     10M;
-  client_max_body_size        10M;
+  # We need to be able to deal with file uploads
+  client_body_buffer_size     30M; 
+  client_max_body_size        30M;
 }
 
 daemon off;
