--- a/app/config/packages/vich_uploader.yaml
+++ b/app/config/packages/vich_uploader.yaml
@@ -4,4 +4,5 @@ vich_uploader:
     mappings:
         declaration_incinerateur:
             uri_prefix: '/declarations/incinerateur'
-            upload_destination: '%kernel.project_dir%/public/declarations/incinerateur'
+            upload_destination: '%kernel.project_dir%/public/declaration-incinerateur'
+            namer: vich_uploader.namer_origname
