--- a/app/config/routes.yaml
+++ b/app/config/routes.yaml
@@ -15,6 +15,11 @@ route_cr_declaration:
     path: /compte-rendu-declaration/{declarationId}
     defaults: { _controller: 'App\Controller\IncinerateurController::cr' }
 
+route_cr_declaration_dioxine:
+    path: /compte-rendu-declaration-dioxine/{declarationId}
+    defaults: { _controller: 'App\Controller\IncinerateurController::crDioxine' }
+
+
 #route_cr_sample:
 #    path: /compte-rendu
 #    defaults: { _controller: 'App\Controller\IncinerateurController::crSample' }
@@ -27,6 +32,15 @@ route_dashboard_owner:
 route_declaration:
     path: /declaration
     defaults: { _controller: 'App\Controller\OwnerController::declaration' }
+
+route_declaration_dioxines:
+    path: /declaration-dioxines
+    defaults: { _controller: 'App\Controller\OwnerController::declarationDioxines' }
+
+route_declaration_mesures_continues:
+    path: /declaration-continues
+    defaults: { _controller: 'App\Controller\OwnerController::declarationMesuresContinues' }
+
 
 route_download_template:
     path: /telecharger-modele
