--- a/app/config/packages/vich_uploader.yaml
+++ b/app/config/packages/vich_uploader.yaml
@@ -4,5 +4,5 @@ vich_uploader:
     mappings:
         declaration_incinerateur:
             uri_prefix: '/declaration-incinerateur'
-            upload_destination: '%kernel.project_dir%/public/declarations'
+            upload_destination: '%kernel.project_dir%/public/declaration-incinerateur'
             namer: vich_uploader.namer_origname
