--- a/app/package.json
+++ b/app/package.json
@@ -1,6 +1,6 @@
 {
     "devDependencies": {
-        "@symfony/webpack-encore": "^0.17.0",
+        "@symfony/webpack-encore": "^0.17.1",
         "copy-webpack-plugin": "^4.5.1",
         "node-sass": "^4.9.0",
         "sass-loader": "^7.0.1"
@@ -15,6 +15,7 @@
     },
     "dependencies": {
         "bulma": "^0.6.2",
+        "bulma-calendar": "^1.3.0",
         "bulma-extensions": "^1.0.14",
         "bulma-tooltip": "^1.0.4",
         "chartjs": "^0.3.24"
