--- a/app/composer.json
+++ b/app/composer.json
@@ -15,6 +15,7 @@
         "symfony/maker-bundle": "^1.2",
         "symfony/orm-pack": "^1.0",
         "symfony/security-bundle": "^3.4",
+        "symfony/validator": "^3.4",
         "symfony/var-dumper": "^3.4",
         "symfony/webpack-encore-pack": "^1.0",
         "symfony/yaml": "^3.4",
