--- a/app/composer.json
+++ b/app/composer.json
@@ -33,7 +33,8 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/"
+            "App\\": "src/",
+            "Aeris\\Component\\ReportParser\\": "aeris/components/ReportParser/src/"
         }
     },
     "autoload-dev": {
