--- a/app/composer.json
+++ b/app/composer.json
@@ -5,6 +5,7 @@
         "php": "^7.0.8",
         "ext-iconv": "*",
         "friendsofsymfony/user-bundle": "dev-master",
+        "phpoffice/phpspreadsheet": "^1.2",
         "squizlabs/php_codesniffer": "*",
         "symfony/asset": "^3.4",
         "symfony/console": "^3.4",
