added sort filter by criterion

--- a/app/config/services.yaml
+++ b/app/config/services.yaml
@@ -45,3 +45,8 @@ services:
         class: App\Command\ValidateReportCommand
         arguments:
             - "@App\\Repository\\DeclarationIncinerateurRepository"
+
+    twig.extension.sortbyfield:
+        class: Snilius\Twig\SortByFieldExtension
+        tags:
+            - { name: twig.extension }
