--- a/app/composer.json
+++ b/app/composer.json
@@ -6,6 +6,7 @@
         "ext-iconv": "*",
         "friendsofsymfony/user-bundle": "dev-master",
         "phpoffice/phpspreadsheet": "^1.2",
+        "snilius/twig-sort-by-field": "^0.1.5",
         "squizlabs/php_codesniffer": "*",
         "symfony/asset": "^3.4",
         "symfony/console": "^3.4",
