--- a/app/composer.json
+++ b/app/composer.json
@@ -21,6 +21,7 @@
         "symfony/var-dumper": "^3.4",
         "symfony/webpack-encore-pack": "^1.0",
         "symfony/yaml": "^3.4",
+        "twig/extensions": "^1.5",
         "vich/uploader-bundle": "^1.7"
     },
     "require-dev": {
