--- a/app/config/routes.yaml
+++ b/app/config/routes.yaml
@@ -50,6 +50,11 @@ route_dashboard_incinerateur:
     path: /tableau-de-bord-incinerateur/{incinerateurId}
     defaults: { _controller: 'App\Controller\DashboardController::dashboard_incinerateur' }
 
+route_dashboard_incinerateur_ligne:
+    path: /tableau-de-bord-incinerateur/{incinerateurId}/ligne/{ligneId}
+    defaults: { _controller: 'App\Controller\DashboardController::dashboard_ligne' }
+
+
 ### Login
 fos_user:
     resource: "@FOSUserBundle/Resources/config/routing/security.xml"
