--- a/app/.gitignore
+++ b/app/.gitignore
@@ -1,4 +1,3 @@
-
 ###> symfony/framework-bundle ###
 .env
 /public/bundles/
@@ -13,3 +12,8 @@
 
 yarn-error.log
 public/declaration-incinerateur/*
+
+###> symfony/phpunit-bridge ###
+.phpunit
+/phpunit.xml
+###< symfony/phpunit-bridge ###
