--- a/app/composer.json
+++ b/app/composer.json
@@ -26,6 +26,7 @@
     },
     "require-dev": {
         "symfony/dotenv": "^3.4",
+        "symfony/phpunit-bridge": "^3.4",
         "symfony/profiler-pack": "^1.0"
     },
     "config": {
