--- a/app/config/services.yaml
+++ b/app/config/services.yaml
@@ -44,15 +44,17 @@ services:
         class: App\Command\LoadReportsCommand
         arguments:
             - "@App\\Repository\\DeclarationIncinerateurRepository"
-            - "@App\\Repository\\MesureRepository"
-            - "@doctrine.orm.entity_manager"
-            - "@vich_uploader.property_mapping_factory"
+            - "@app.services.declaration_importer"
 
     app.command.LoadCounterReportsCommand:
         class: App\Command\LoadCounterReportsCommand
         arguments:
             - "@App\\Repository\\DeclarationIncinerateurRepository"
-            - "@App\\Repository\\MesureRepository"
+            - "@app.services.declaration_importer"
+
+    app.services.declaration_importer:
+        class: Aeris\Component\ReportParser\DeclarationImporter
+        arguments:
             - "@doctrine.orm.entity_manager"
             - "@vich_uploader.property_mapping_factory"
 
