--- a/app/config/packages/security.yaml
+++ b/app/config/packages/security.yaml
@@ -18,7 +18,8 @@ security:
                 always_use_default_target_path: false
                 success_handler: "app.security.login_success_handler"
             logout_on_user_change: true
-            logout:       true
+            logout:
+                success_handler: "app.security.logout_success_handler"
             anonymous:    true
  
     role_hierarchy:
