mail sending component

--- a/app/.env.dist
+++ b/app/.env.dist
@@ -17,5 +17,6 @@ DATABASE_URL=postgresql://symfony:symfony@db:5432/aeris
 # For Gmail as a transport, use: "gmail://username:password@localhost"
 # For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
 # Delivery is disabled by default via "null://localhost"
-MAILER_URL=null://localhost
+MAILJET_API_KEY=plop
+MAILJET_SECRET_KEY=pouet
 ###< symfony/swiftmailer-bundle ###
