--- a/app/composer.json
+++ b/app/composer.json
@@ -5,6 +5,7 @@
         "php": "^7.0.8",
         "ext-iconv": "*",
         "friendsofsymfony/user-bundle": "dev-master",
+        "mailjet/mailjet-apiv3-php": "^1.2",
         "phpoffice/phpspreadsheet": "^1.2",
         "snilius/twig-sort-by-field": "^0.1.5",
         "squizlabs/php_codesniffer": "*",
@@ -17,6 +18,7 @@
         "symfony/maker-bundle": "^1.2",
         "symfony/orm-pack": "^1.0",
         "symfony/security-bundle": "^3.4",
+        "symfony/swiftmailer-bundle": "^3.2",
         "symfony/validator": "^3.4",
         "symfony/var-dumper": "^3.4",
         "symfony/webpack-encore-pack": "^1.0",
@@ -39,6 +41,7 @@
         "psr-4": {
             "App\\": "src/",
             "Aeris\\Component\\ReportParser\\": "aeris/components/ReportParser/src/",
+            "Aeris\\Component\\Mail\\": "aeris/components/Mail/src/",
             "Aeris\\Component\\Report\\": "aeris/components/Report/src/"
         }
     },
