fix service configuration

--- a/app/config/services.yaml
+++ b/app/config/services.yaml
@@ -61,6 +61,7 @@ services:
         arguments:
             - "@doctrine.orm.entity_manager"
             - "@vich_uploader.property_mapping_factory"
+        public: true
     
     app.command.SendMailCommand:
         class: App\Command\SendMailCommand
