started refactoring dioxines controllers/routing

--- a/app/config/routes.yaml
+++ b/app/config/routes.yaml
@@ -17,21 +17,36 @@ route_cr_declaration:
 
 route_cr_declaration_dioxine:
     path: /historique/declaration-dioxine/{declarationId}
-    defaults: { _controller: 'App\Controller\IncinerateurController::crDioxine' }
+    defaults: { _controller: 'App\Controller\DeclarationDioxinesController::crDioxine' }
 
 ### Owner
-route_dashboard_owner:
-    path: /tableau-de-bord-exploitant
-    defaults: { _controller: 'App\Controller\OwnerController::dashboard' }
+route_download_asset:
+    path: /telecharger-ressource
+    defaults: { _controller: 'App\Controller\OwnerController::downloadAsset' }
 
 route_declaration:
     path: /declarer
     defaults: { _controller: 'App\Controller\OwnerController::declarationChoice' }
 
+# Dioxines
 route_declaration_dioxines:
     path: /declarer-dioxines
-    defaults: { _controller: 'App\Controller\OwnerController::declarationDioxines' }
+    defaults: { _controller: 'App\Controller\DeclarationDioxinesController::declarer' }
 
+route_review_declaration_dioxines:
+    path: /verification-declaration-dioxines/{declarationId}
+    defaults: { _controller: 'App\Controller\DeclarationDioxinesController::review' }
+
+route_edit_declaration_dioxines:
+    path: /modification-declaration-dioxines/{declarationId}
+    defaults: { _controller: 'App\Controller\DeclarationDioxinesController::modify' }
+
+route_validate_declaration_dioxines:
+    path: /fin-declaration-dioxines/{declarationId}
+    defaults: { _controller: 'App\Controller\DeclarationDioxinesController::validate' }
+
+
+# Mesures continues
 route_declaration_mesures_continues:
     path: /declarer-mesures-continues
     defaults: { _controller: 'App\Controller\DeclarationMesuresContinuesController::declare' }
@@ -48,9 +63,6 @@ route_validate_declaration_mesures_continues:
     path: /fin-declaration-mesures-continues/{declarationId}
     defaults: { _controller: 'App\Controller\DeclarationMesuresContinuesController::validate' }
 
-route_download_asset:
-    path: /telecharger-ressource
-    defaults: { _controller: 'App\Controller\OwnerController::downloadAsset' }
 
 ### Inspecteur
 route_liste_incinerateurs:
